docs/user/1.1/_sources/cli/apptainer_instance_stats.rst.txt
.. _apptainer_instance_stats:

apptainer instance stats
------------------------

Get stats for a named instance

Synopsis
~~~~~~~~



  The instance stats command allows you to get statistics for a named instance,
  either printed to the terminal or in json. If you are root, you can optionally
  ask for statistics for a container instance belonging to a specific user.

::

  apptainer instance stats [stats options...] <instance name>

Examples
~~~~~~~~

::


    $ apptainer instance stats mysql
    $ apptainer instance stats --json mysql
    $ sudo apptainer instance stats --user <username> user-mysql

Options
~~~~~~~

::

  -h, --help          help for stats
  -j, --json          output stats in json
  -u, --user string   view stats for an instance belonging to a user (root only)

SEE ALSO
~~~~~~~~

* :ref:`apptainer instance <apptainer_instance>` 	 - Manage containers running as services

*Auto generated by spf13/cobra on 23-Dec-2022*
